# VITS-MNN

./: .gitattributes  LICENSE  README.md  settings.gradle
MNN_Vits/: build.gradle
MNN_Vits/src/androidTest/java/com/example/mnn_vits/: ExampleInstrumentedTest.kt
MNN_Vits/src/main/cpp/: CMakeLists.txt  mnn_vits_jni.cpp  mnn_vits_loader.cpp  mnn_vits_loader.hpp
MNN_Vits/src/main/java/com/example/mnn_vits/: MnnVitsJni.kt
MNN_Vits/src/test/java/com/example/mnn_vits/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/example/mnnvits/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/mnn/: vits_uma_genshin_honkai_dec_fp16.mnn  vits_uma_genshin_honkai_dp_fp16.mnn  vits_uma_genshin_honkai_emb_fp16.mnn  vits_uma_genshin_honkai_enc_fp16.mnn  vits_uma_genshin_honkai_flow_fp16.mnn
app/src/main/java/com/example/mnnvits/: MainActivity.kt  SoundPlayHandler.kt  VoiceGenerationScreen.kt  VoiceViewModel.kt
app/src/main/java/com/example/mnnvits/utils/: ChineseCleaners.java  ChineseTextUtils.kt  FileExt.kt  FileUtils.kt  Normalizer.kt  SaveWavUtils.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mnnvits/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
onnx_export/: README.md
onnx_export/model/: vits_uma_genshin_honkai_dec.onnx  vits_uma_genshin_honkai_dp.onnx  vits_uma_genshin_honkai_emb.onnx  vits_uma_genshin_honkai_enc_p.onnx  vits_uma_genshin_honkai_flow.onnx
onnx_export/script/: models_onnx.py  onnx_infer.py  pth2onnx.py
(+3 files in other folders)
